[gd_scene load_steps=7 format=3 uid="uid://cdwhg4mec6ykv"]

[ext_resource type="Script" path="res://Scripts/monster.gd" id="1_xjoc5"]
[ext_resource type="Material" uid="uid://dj5pv4vfeasw1" path="res://Materials/wall2.tres" id="2_luug4"]
[ext_resource type="AudioStream" uid="uid://bx8ihtpsm8fml" path="res://Sounds/scare_sound.mp3" id="3_w6jo3"]
[ext_resource type="Script" path="res://Scripts/enemy_raycast.gd" id="4_hj02x"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_h4o0t"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_xfuk8"]

[node name="Monster" type="CharacterBody3D" groups=["monster"]]
script = ExtResource("1_xjoc5")
scene_name = "death"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 1, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource("CapsuleShape3D_h4o0t")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_xfuk8")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.887429, 0, 0, 0, 0.239276, 0, 0, 0, 0.887429, 0, 0.425292, -0.225006)
material_override = ExtResource("2_luug4")
mesh = SubResource("CapsuleMesh_xfuk8")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true

[node name="jumpscare_camera" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.405599, -1.73515)

[node name="jumpscare_light" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1)
visible = false

[node name="jumscare_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_w6jo3")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.5)
script = ExtResource("4_hj02x")

[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="on_navigation_agent_3d_velocity_computed"]
